--- a/assets/css/oppurtunity.css
+++ b/assets/css/oppurtunity.css
@@ -41,8 +41,8 @@ li {
 }
 
 .oppurtunity_section {
-    margin-left: 5%;
-    margin-right: 5%;
+    /* margin-left: 5%;
+    margin-right: 5%; */
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
