--- a/assets/css/blog.css
+++ b/assets/css/blog.css
@@ -87,3 +87,37 @@
   font-family: "Open Sans", sans-serif;
 }
 
+
+
+/* Scroll To Top Button */
+
+a.back-to-top {
+  display: none;
+  position: fixed;
+  bottom: 28px;
+  right: 29px;
+  text-decoration: none;
+}
+
+a.back-to-top i {
+  display: block;
+  font-size: 22px;
+  width: 50px;
+  height: 50px;
+  line-height: 50px;
+  color: #fff;
+  background: #fc0155;
+  border-radius: 30px;
+  text-align: center;
+  transition: all 0.1s ease-in-out;
+  -moz-transition: all 0.1s ease-in-out;
+  -webkit-transition: all 0.1s ease-in-out;
+  -o-transition: all 0.1s ease-in-out;
+  box-shadow: 0 0 4px rgba(0, 0, 0, 0.14), 0 4px 8px rgba(0, 0, 0, 0.28);
+}
+
+a.back-to-top:hover,
+a.back-to-top:focus {
+  text-decoration: none;
+}
+
