--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1224,6 +1224,14 @@ textarea {
   letter-spacing: 0.5px;
 }
 
+.footer-area .contact-footer, .footer-news {
+  font-size: 18px;
+  color: #fff;
+  font-weight: 500;
+  padding-bottom: 5px;
+  letter-spacing: 0.5px;
+}
+
 .footer-area .footer-titel span {
   color: #ccc;
   font-weight: 400;
@@ -1256,7 +1264,7 @@ textarea {
 }
 
 .footer-area .address li {
-  margin-bottom: 10px;
+  margin-bottom:0px;
 }
 
 .footer-area .address li a {
@@ -1268,10 +1276,10 @@ textarea {
 }
 
 .footer-area .address li a i {
-  font-size: 22px;
+  font-size: 20px;
   width: 32px;
   vertical-align: middle;
-  height: 36px;
+  height: 32px;
   text-align: center;
   display: inline-block;
   margin-right: 5px;
@@ -1302,7 +1310,7 @@ textarea {
 }
 
 .mail input{
-	padding:10px;
+	padding:9px;
 	width: 200px;
 	font-family:helvetica;
 	font-size:14px;
@@ -1313,9 +1321,10 @@ textarea {
 }
 
 .mail #btns{
-	padding:10px;
+	padding:9px;
 	border:0;
 	width: 80px;
+  text-align: center;
 	font-family:helvetica;
 	font-size:14px;
 	border-bottom-right-radius: 5px;
