Added FAQs before contact us section

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1546,6 +1546,69 @@ textarea {
 
 /* //// Community partners end//// */
 
+/* FAQ section starts here */
+*{
+  margin: 6px;
+  
+}
+.accordion {
+    background-color: #fff2f2;
+    color: rgb(36, 36, 36);
+    cursor: pointer;
+    padding: 18px;
+    width: 100%;
+    border: none;
+    text-align: left;
+    outline: none;
+    font-size: 20px;
+    transition: 0.4s;
+    border-radius: 6px;
+    border: 3px solid  rgb(202, 202, 202);
+    box-shadow: 5px 5px 5px rgb(207, 201, 201);
+    transition: all .3s ease-in ;
+}
+  button.accordion i.slide-down {
+  transform: rotate(0);
+  transition: 0.4s;
+  }
+  
+  button.accordion i.slidedown.slide-top {
+  transform: rotate(-180deg);
+  color: #fa5019;
+  }
+  .accordion:hover {
+    background-color:  #fdf1f1 ; 
+    color: black;
+    border-color: #c2c2c2;
+    box-shadow: 2px 2px 10px rgb(151, 129, 129),5px 5px 25px rgb(207, 201, 201);
+  }
+  .panel {
+      padding: 0px 18px;
+      background-color: white;
+      max-height: 0;
+      overflow: hidden;
+      transition: max-height .4s ease-out;
+  }
+  .panelPara {
+    padding: 20px;
+    font-size: 18px;
+  }
+  .panelPara a{
+    color: black;
+    font-weight: 800;
+  }
+  .accordion:after {
+    content: '\02795';
+    font-size: 13px;
+    float: right;
+    margin-left: 5px;
+  }
+  .active:after {
+    content: "\2796"; 
+  }
+
+  /* ////FAQ section ends here//// */
+
 /* //// Counter starts//// */
 .counter-up {
   min-height: 70vh;
@@ -1656,7 +1719,7 @@ textarea {
 /* //// Counter end//// */
 /* navigate to top button */
 #buttontop {
-  background: #fc0155;
+  background: #fe0155;
   color: white;
   outline: none;
   border: none;
