--- a/assets/css/swipper.css
+++ b/assets/css/swipper.css
@@ -5,7 +5,6 @@
   height: 400px;
   margin-top: 50px;
 }
-
 #testimonials-slider .swiper {
   width: 100%;
   height: 100%;
@@ -63,7 +62,6 @@
 .swiper-button-prev{
   left: 50px;
 }
-
 @media (max-width: 800px) {
   .swiper-button-next, .swiper-button-prev {
     display: none;
@@ -73,5 +71,35 @@
   #testimonials {
     padding-left: 50px;
     padding-right: 50px;
+  }
+}
+
+/* Testimonial Section*/
+.testimonial-community #testimonials-slider .swiper .swiper-slide .img-thumb img {
+  border-radius: 50%;
+  display: inline-block;
+  width: 100px;
+  height: 100px;
+  object-fit: cover;
+  padding: 3px;
+  border: solid 2px #004bed;
+}
+.testimonial-community #testimonials-slider .swiper .swiper-slide .testimonial-item h3 {
+  text-align: justify;
+  line-height: 28px;
+}
+.testimonial-community #testimonials #testimonials-slider {
+  width: 100%;
+  height: 400px;
+  margin-top: 0px;
+}
+@media (max-width: 1200px) {
+  .testimonial-community #testimonials-slider .swiper .swiper-slide .testimonial-item h3 {
+    line-height: 25px;
+  }
+}
+@media (max-width: 1000px) {
+  .testimonial-community #testimonials-slider .swiper .swiper-slide .testimonial-item h3 {
+    line-height: 29px;
   }
 }
