Improved go to top button position

--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -16,8 +16,8 @@
     padding: 15px 20px;
   }
   #buttontop{
-    bottom: 25px;
-    left: 30px;
+    bottom: 20px;
+    right: 20px;
   }
 }
 
@@ -47,8 +47,8 @@ left: 30px; */
   }
   
   #buttontop{
-    bottom: 25px;
-    left: 30px;
+    bottom: 20px;
+    right: 20px;
   }
 }
 
@@ -115,8 +115,8 @@ left: 30px; */
   }
   
   #buttontop{
-    bottom: 25px;
-    left: 30px;
+    bottom: 20px;
+    right: 20px;
   }
 }
 
@@ -229,8 +229,8 @@ left: 30px; */
     margin-bottom: 30px;
   }
   #buttontop{
-    bottom: 25px;
-    left: 30px;
+    bottom: 20px;
+    right: 20px;
   }
 }
 
