--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1547,11 +1547,8 @@ textarea {
 /* //// Community partners end//// */
 
 /* FAQ section starts here */
-*{
-  margin: 6px;
-  
-}
-.accordion {
+
+.accordionFAQs {
     background-color: #fff2f2;
     color: rgb(36, 36, 36);
     cursor: pointer;
@@ -1566,46 +1563,45 @@ textarea {
     border: 3px solid  rgb(202, 202, 202);
     box-shadow: 5px 5px 5px rgb(207, 201, 201);
     transition: all .3s ease-in ;
+    margin: 10px;
 }
-  button.accordion i.slide-down {
+  button.accordionFAQs i.slide-down {
   transform: rotate(0);
   transition: 0.4s;
   }
   
-  button.accordion i.slidedown.slide-top {
+  button.accordionFAQs i.slidedown.slide-top {
   transform: rotate(-180deg);
   color: #fa5019;
   }
-  .accordion:hover {
+  .accordionFAQs:hover {
     background-color:  #fdf1f1 ; 
     color: black;
     border-color: #c2c2c2;
     box-shadow: 2px 2px 10px rgb(151, 129, 129),5px 5px 25px rgb(207, 201, 201);
   }
-  .panel {
+  .panelFAQs {
       padding: 0px 18px;
       background-color: white;
       max-height: 0;
       overflow: hidden;
       transition: max-height .4s ease-out;
   }
-  .panelPara {
+  .panelParaFAQs {
     padding: 20px;
     font-size: 18px;
   }
-  .panelPara a{
+  .panelParaFAQs a{
     color: black;
     font-weight: 800;
   }
-  .accordion:after {
+  .accordionFAQs:after {
     content: '\02795';
     font-size: 13px;
     float: right;
     margin-left: 5px;
   }
-  .active:after {
-    content: "\2796"; 
-  }
+  
 
   /* ////FAQ section ends here//// */
 
@@ -1719,7 +1715,7 @@ textarea {
 /* //// Counter end//// */
 /* navigate to top button */
 #buttontop {
-  background: #fe0155;
+  background: #fc0155;
   color: white;
   outline: none;
   border: none;
