--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1694,17 +1694,21 @@ textarea {
   flex-direction: column;
   padding: 30px;
   height: 20em;
-  background:#f4f4f4;
+  
 }
 
 .content .box .icon {
-  font-size: 2em;
+  font-size: 4em;
   color: white;
   background-color: #f63854;
-  border: 1px solid;
-  padding: 30px 30px;
+  /* border: 1px solid; */
+  padding: 50px;
   border-radius: 50%;
 }
+
+/* .content .box .icon .icon2{
+  font-size: 0.5em;
+} */
 
 
 
