Home page icons updated to be seen in hover state

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -219,6 +219,11 @@ a:not([href]):not([tabindex]) {
   display: inline-block;
 }
 
+.fa{
+  font-size: 17px;
+  margin-right: 8px;
+}
+
 .btn:focus,
 .btn:active {
   box-shadow: none;
