Event CTA button properly centered in the event card

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1038,6 +1038,9 @@ hr {
 .events_box:hover .content {
   display: block;
 }
+.events_box:hover .content a{
+  margin-left:32px;
+}
 
 .events_box:hover .events_img {
   display: none;
