--- a/assets/css/blog.css
+++ b/assets/css/blog.css
@@ -46,7 +46,7 @@
 
 .image img {
   object-fit: cover;
-  width: 350px;
+  width: 100%;
   border-radius: 30px 30px 0px 0px;
   height: 349px;
 }
@@ -57,7 +57,7 @@
   left: 0;
   position: absolute;
   z-index: 1;
-  width: 350px;
+  width: 100%;
   height: 260px;
   display: flex;
   justify-content: space-around;
@@ -87,3 +87,9 @@
   font-family: "Open Sans", sans-serif;
 }
 
+.center {
+  display: flex;
+  margin-left: auto;
+  margin-right: auto;
+  width: 90%;
+}
