--- a/preloader/blog.css
+++ b/preloader/blog.css
@@ -49,10 +49,11 @@
 
 .image img {
   object-fit: cover;
-  width: 350px;
+  width: 100%;
   border-radius: 30px 30px 0px 0px;
   height: 349px;
 }
+
 
 
 .blog_content {
@@ -89,4 +90,9 @@
   font-size: 12px;
   font-family: "Open Sans", sans-serif;
 }
-
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 0%;
+}
