--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1715,7 +1715,6 @@ textarea {
   padding: 20px;
   height: 26em;
 }
-
 .content .box .icon {
   font-size: 4em;
   color: white;
@@ -1800,4 +1799,48 @@ textarea {
 .tawk-min-container {
   margin: 0;
   padding: 0;
+}
+/*counter section*/
+.counters-section{
+  background: linear-gradient(90deg, #fc0155 0%, #ea80a3 100%);
+  padding: 5rem 0;
+}
+.counter{
+  color: #Fc0155;
+  background: linear-gradient(to right bottom,#fff 50%, #f9f9f9 51%);
+  text-align: center;
+  width: 230px;
+  padding: 20px 0 0;
+  margin: 0 auto;
+  border-radius: 50px 0;
+  box-shadow: 0 0 15px -5px rgba(0, 0, 0, 0.3);
+  overflow: hidden;
+}
+.counter .counter-icon{
+  font-size: 45px;
+  margin: 10px 0 20px;
+}
+.counter h3{
+  font-size: 18px;
+  font-weight: 700;
+  text-transform: capitalize;
+  margin: 0 0 20px;
+}
+.counter .counter-value{
+  color: #fff;
+  background: linear-gradient(to right bottom, #FD8ED2, #Fc0155);
+  font-size: 60px;
+  font-weight: 700;
+  line-height: 70px;
+  padding: 7px 0 3px;
+  display: block;
+}
+.counter.blue{ color: #0092CD; }
+.counter.blue .counter-value{ background: linear-gradient(to right bottom, #06BBF4, #0092CD); }
+.counter.orange{ color: #FB9A00; }
+.counter.orange .counter-value{ background: linear-gradient(to right bottom, #FCCA09, #FB9A00); }
+.counter.green{ color: #03BFB0; }
+.counter.green .counter-value{ background: linear-gradient(to right bottom, #00E2CD, #03BFB0); }
+@media screen and (max-width:990px){
+  .counter{ margin-bottom: 40px; }
 }
