fixed bug in contact us heading

--- a/assets/scss/main.css
+++ b/assets/scss/main.css
@@ -75,6 +75,8 @@ a:not([href]):not([tabindex]) {
   display: inline-block;
   font-weight: 700;
   position: relative;
+  border: transparent;
+  margin: 0;
 }
 
 .shape {
