--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -156,6 +156,8 @@ a:not([href]):not([tabindex]) {
   display: inline-block;
   font-weight: 700;
   position: relative;
+  border: transparent;
+  margin: 0;
 }
 
 .shape {
