--- a/assets/css/blog.css
+++ b/assets/css/blog.css
@@ -55,7 +55,7 @@
   position: absolute;
   z-index: 1;
   width: 100%;
-  height: 260px;
+  height: auto;
   display: flex;
   justify-content: space-around;
   align-items: center;
