Fixed Nav Btn Hover Bug

--- a/assets/scss/_navbar.scss
+++ b/assets/scss/_navbar.scss
@@ -119,7 +119,7 @@
 .navbar{
   padding: 10px 0;
    li.active a.nav-link {
-      color: #preset;
+      color: $preset;
   }
 }
 .dropdown-toggle::after{
