Updated text-align : center for mobile view on nav
issue #380

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -35,4 +35,8 @@ h2 {
     .page-header h2{
         font-size: 1.5rem;
     }
+    .navbar-nav .nav-link {
+            text-align: center;
+
+        }
 }
