--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -644,8 +644,9 @@ hr {
 
 .navbar-expand-md .navbar-nav .nav-item {
   padding-left: 25px;
+  width: 25%;
+  position: static;
 }
-
 .navbar-expand-md .navbar-nav .nav-link {
   color: #333;
   font-weight: 400;
