add min-height property to main page

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -23,6 +23,7 @@ body {
   -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
   overflow-x: hidden;
+  min-height: fit-content;
 }
 
 /* social icons start */
