--- a/assets/css/blog.css
+++ b/assets/css/blog.css
@@ -1,3 +1,8 @@
+:root {
+  --primary: #f7b801;
+  --secondary: #ffd100;
+}
+
 .container_blog {
   display: flex;
   justify-content: center;
@@ -13,7 +18,7 @@
   margin: 50px;
   position: relative;
   border-radius: 30px;
-  filter: drop-shadow(23px 24px 36px rgba(254, 42, 80, 0.25));
+  filter: drop-shadow(23px 24px 36px rgba(248, 232, 2, 0.25));
 }
 
 .blog:hover {
@@ -24,17 +29,17 @@
 }
 
 .read_btn {
-  background-color: #f63854;
+  background-color: var(--primary);
   padding: 7px 10px;
-  border: 1px solid #f63854;
+  border: 1px solid var(--primary);
   border-radius: 30px;
   border: 1px dotted white;
   color: white;
 }
 
 .read_btn:hover {
-  color: #f63854;
-  border: 1px dotted #f63854;
+  color: var(--primary);
+  border: 1px dotted var(--primary);
   background: white;
   box-shadow: 0 6px 22px rgba(0, 0, 0, 0.1);
   transition: all 0.2s ease-in-out;
@@ -63,7 +68,7 @@
   padding: 20px;
   border-radius: 0px 0px 30px 30px;
   background-color: white;
-  color: #f63854;
+  color: var(--primary);
 }
 
 .blog_content:hover {
@@ -129,15 +134,15 @@
   display: block;
   object-fit: cover;
   height: 250px;
-  }
-  
-  #blog .col-md-6 {
+}
+
+#blog .col-md-6 {
   padding: 0;
   max-width: 45%;
   display: flex;
   flex-direction: column;
   overflow: hidden;
-  box-shadow: 0 .1rem 1rem rgba(0, 0, 0, 0.1);
+  box-shadow: 0 0.1rem 1rem rgba(0, 0, 0, 0.1);
   border-radius: 1em;
   background: #fff;
   margin: 1em auto;
@@ -145,98 +150,96 @@
   transition: all 0.3s ease-in-out;
   -moz-transition: all 0.3s ease-in-out;
   -webkit-transition: all 0.3s ease-in-out;
-  
-  }
-  #blog .col-md-6:hover {
+}
+#blog .col-md-6:hover {
   transform: scale(1.04);
   transition: all 0.3s ease-in-out;
   -moz-transition: all 0.3s ease-in-out;
   -webkit-transition: all 0.3s ease-in-out;
-  }
-  .read_btn {
-  background-color: #f63854;
+}
+.read_btn {
+  background-color: var(--primary);
   padding: 7px 10px;
-  border: 1px solid #f63854;
+  border: 1px solid var(--primary);
   border-radius: 30px;
   border: 1px dotted white;
   color: white;
   margin-bottom: 1rem;
   margin-left: 1rem;
-  }
-  
-  .read_btn:hover {
-  color: #f63854;
-  border: 1px dotted #f63854;
+}
+
+.read_btn:hover {
+  color: var(--primary);
+  border: 1px dotted var(--primary);
   background: white;
   box-shadow: 0 6px 22px rgba(0, 0, 0, 0.1);
   transition: all 0.2s ease-in-out;
   -moz-transition: all 0.2s ease-in-out;
   -webkit-transition: all 0.2s ease-in-out;
-  }
-  
-  .card__body {
+}
+
+.card__body {
   padding: 1rem 2rem;
   display: flex;
   flex-direction: column;
-  gap: .5rem;
+  gap: 0.5rem;
   margin: 1rem 0;
-  }
-  
-  
-  .card__body h4 {
+}
+
+.card__body h4 {
   font-size: 1.5rem;
   text-transform: capitalize;
-  }
-  
-  .card__footer {
+}
+
+.card__footer {
   display: flex;
   padding: 1rem;
   margin-top: auto;
+}
+.search {
+  float: left;
+  margin-right: 5%;
+}
+@media screen and (max-width: 1000px) {
+  #blog .col-md-6 {
+    max-width: 90%;
+    margin: 1em auto;
   }
-  .search{
-    float: left;
-    margin-right: 5%;
+
+  .search {
+    float: right;
+    margin-right: 15%;
   }
-  @media screen and (max-width: 1000px) {
-    #blog .col-md-6{
-      max-width: 90%;
-      margin:1em auto;
-    }
-  
-    .search{
-      float:right;
-      margin-right: 15%;
-    }
+}
+/* media queries for screen less than size 430px */
+
+@media screen and (max-width: 430px) {
+  #blog.col-md-6 {
+    max-width: 80%;
+    margin: 1em auto;
   }
-  /* media queries for screen less than size 430px */
-  
-  @media screen and (max-width: 430px) {
-    #blog.col-md-6{
-      max-width: 80%;
-      margin:1em auto;
-    }
-    .centered_img {
-      object-fit: cover;
-      margin: auto;
-      max-width: -webkit-fill-available;
-      padding-left: 10px;
-      padding-right: 10px;
-      border-radius: 12px;
-    }
-    .searchbar_div {
-      display: flex;
-      float: none !important;
-      margin-right: 0 !important;
-    }
-    .searchbar_div input {
-      border-radius: 3rem;
-      padding: 10px;
-      border-color: grey;
-      /* width: 130%; */
-      width: 90% !important;
-      margin: auto;
-    }
-    /* .project_card_img {
+  .centered_img {
+    object-fit: cover;
+    margin: auto;
+    max-width: -webkit-fill-available;
+    padding-left: 10px;
+    padding-right: 10px;
+    border-radius: 12px;
+  }
+  .searchbar_div {
+    display: flex;
+    float: none !important;
+    margin-right: 0 !important;
+  }
+  .searchbar_div input {
+    border-radius: 3rem;
+    padding: 10px;
+    border-color: grey;
+    /* width: 130%; */
+    width: 90% !important;
+    margin: auto;
+  }
+  /* .project_card_img {
       object-fit: contain !important;
     } */
-  }
+}
