--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -8,6 +8,11 @@ html {
   /* ---added smooth scrolling--- */
 }
 
+:root {
+  --primary: #f7b801;
+  --secondary: #ffd100;
+}
+
 body {
   background: #fff;
   font-size: 14px;
@@ -165,7 +170,7 @@ a:not([href]):not([tabindex]) {
   margin: 0 auto 30px;
   position: relative;
   width: 60px;
-  background-color: #f63854;
+  background-color: var(--primary);
 }
 
 .shape-testimonial {
@@ -177,10 +182,10 @@ a:not([href]):not([tabindex]) {
 }
 
 /* updated the title of Meet Our Team Section */
-.h2w{
+.h2w {
   color: #eee;
 }
-.w{
+.w {
   background-color: #eee;
 }
 
@@ -221,7 +226,7 @@ a:not([href]):not([tabindex]) {
   display: inline-block;
 }
 
-.fa{
+.fa {
   font-size: 17px;
   margin-right: 8px;
 }
@@ -234,16 +239,16 @@ a:not([href]):not([tabindex]) {
 }
 
 .btn-common {
-  background-color: #f63854;
+  background-color: var(--primary);
   position: relative;
   z-index: 1;
   text-transform: uppercase;
 }
 
 .btn-common:hover {
-  color: #f63854;
+  color: var(--primary);
   background: transparent;
-  border: 1px dotted #f63854;
+  border: 1px dotted var(--primary);
   box-shadow: 0 6px 22px rgba(0, 0, 0, 0.1);
   transition: all 0.2s ease-in-out;
   -moz-transition: all 0.2s ease-in-out;
@@ -251,23 +256,23 @@ a:not([href]):not([tabindex]) {
 }
 
 .btn-border {
-  color: #f63854;
+  color: var(--primary);
   background-color: transparent;
-  border: 1px solid #f63854;
+  border: 1px solid var(--primary);
   border-radius: 30px;
   text-transform: uppercase;
 }
 
 .btn-border:hover {
   color: #fff;
-  border-color: #f63854;
-  background-color: #f63854;
+  border-color: var(--primary);
+  background-color: var(--primary);
 }
 
 .btn-border:focus {
   color: #fff;
-  border-color: #f63854;
-  background-color: #f63854;
+  border-color: var(--primary);
+  background-color: var(--primary);
 }
 
 .btn-lg {
@@ -278,12 +283,12 @@ a:not([href]):not([tabindex]) {
 
 .btn-rm {
   padding: 7px 0px;
-  color: #f63854;
+  color: var(--primary);
   text-transform: capitalize;
 }
 
 .btn-rm:hover {
-  color: #f63854;
+  color: var(--primary);
 }
 
 button:focus {
@@ -292,7 +297,7 @@ button:focus {
 
 .icon-close,
 .icon-check {
-  color: #f63854;
+  color: var(--primary);
 }
 
 .social-icon a {
@@ -322,23 +327,23 @@ button:focus {
   align-items: center;
 }
 .mentor-profile i {
-  color: #f63854;
+  color: var(--primary);
   font-size: 20px;
   margin-right: 0.7rem;
 }
-.mentor-profile .fa-linkedin:hover{
-  color: #0A66C2;
+.mentor-profile .fa-linkedin:hover {
+  color: #0a66c2;
 }
-.mentor-profile .fa-discord:hover{
+.mentor-profile .fa-discord:hover {
   color: #7289d9;
 }
-.mentor-profile .fa-github:hover{
+.mentor-profile .fa-github:hover {
   color: #000;
 }
-.mentor-profile .fa-youtube:hover{
+.mentor-profile .fa-youtube:hover {
   color: #f00;
 }
-.mentor-profile .fa-twitter:hover{
+.mentor-profile .fa-twitter:hover {
   color: #00acee;
 }
 .social-icon a:hover {
@@ -381,7 +386,7 @@ a.back-to-top i {
   height: 40px;
   line-height: 40px;
   color: #fff;
-  background: #f63854;
+  background: var(--primary);
   border-radius: 30px;
   text-align: center;
   transition: all 0.2s ease-in-out;
@@ -426,7 +431,7 @@ a.back-to-top:focus {
   height: 100%;
   border-radius: 100%;
   border: 7px solid transparent;
-  border-top-color: #f63854;
+  border-top-color: var(--primary);
 }
 
 .help-block.with-errors {
@@ -501,7 +506,7 @@ hr {
 
 .services-item .icon i {
   font-size: 30px;
-  color: #f63854;
+  color: var(--primary);
   line-height: 70px;
   transition: all 0.3s ease-in-out 0s;
   -moz-transition: all 0.3s ease-in-out 0s;
@@ -522,7 +527,7 @@ hr {
 }
 
 .services-item .services-content h3 a:hover {
-  color: #f63854;
+  color: var(--primary);
 }
 
 .services-item:hover {
@@ -530,7 +535,7 @@ hr {
 }
 
 .services-item:hover .icon {
-  background: #f63854;
+  background: var(--primary);
 }
 
 .services-item:hover .icon i {
@@ -600,18 +605,18 @@ hr {
 
 .top-nav-collapse .navbar-nav .nav-link:hover {
   cursor: pointer;
-  color: #f63854 !important;
-  border-color: #f63854 !important;
+  color: var(--primary) !important;
+  border-color: var(--primary) !important;
 }
 
 .top-nav-collapse .navbar-nav .nav-link:hover {
-  color: #f63854 !important;
+  color: var(--primary) !important;
 }
 
 .navbar-expand-md .navbar-toggler {
   background: transparent;
-  border: 1px solid #f63854;
-  color: #f63854;
+  border: 1px solid var(--primary);
+  color: var(--primary);
   border-radius: 4px;
   cursor: pointer;
 }
@@ -621,8 +626,8 @@ hr {
 }
 
 .top-nav-collapse .navbar-nav li.active a.nav-link {
-  color: #f63854 !important;
-  border-color: #f63854;
+  color: #585b60 !important;
+  border-color: var(--primary);
 }
 
 .indigo {
@@ -685,14 +690,14 @@ hr {
 .navbar-expand-md .navbar-nav .nav-link.active,
 .navbar-expand-md .navbar-nav .nav-link.open,
 .navbar-expand-md .navbar-nav .open > .nav-link {
-  color: #f63854 !important;
+  color: var(--primary) !important;
   width: 100%;
 }
 
 .navbar-expand-md .navbar-nav .nav-link:hover,
 .navbar-expand-md .navbar-nav .nav-link:hover::before,
 .navbar-expand-md .navbar-nav .nav-link:focus {
-  color: #f63854;
+  color: var(--primary);
   width: 100%;
   transition: width 1s;
   -webkit-transition: width 1s;
@@ -788,7 +793,7 @@ hr {
 .dropdown .dropdown-item:focus,
 .dropdown .dropdown-item:hover,
 .dropdown .dropdown-item.active {
-  color: #f63854;
+  color: var(--primary);
   background: #f7f7f7;
 }
 
@@ -839,10 +844,10 @@ hr {
 
 .testimonial {
   position: relative;
-  background-color: #f63854;
+  background-color: var(--primary);
 }
 
-.testimonial-community{
+.testimonial-community {
   background-color: #f3f4f6;
 }
 
@@ -910,7 +915,7 @@ hr {
   color: #fff;
   border-radius: 50%;
   border: 2px solid transparent;
-  background: #f63854;
+  background: var(--primary);
   transition: all 0.3s ease;
 }
 
@@ -959,7 +964,7 @@ hr {
 .owl-carousel button.owl-dot.active span,
 .owl-carousel button.owl-dot.clickable,
 .owl-carousel button.owl-dot:hover span {
-  background: #f63854;
+  background: var(--primary);
 }
 
 .slick-slider {
@@ -998,7 +1003,7 @@ hr {
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: #f63854;
+  background: var(--primary);
 }
 
 /* Handle on hover */
@@ -1047,14 +1052,21 @@ hr {
 }
 
 .events_box:hover {
-  box-shadow: 0px 0px 30px rgb(87, 4, 4);
+  box-shadow: 0px 0px 30px #bf8f00;
 }
 
 .events_box:hover .content {
   display: block;
 }
-.events_box:hover .content a{
-  margin-left:32px;
+.events_box:hover .content a {
+  margin-left: 32px;
+  background-color: var(--secondary);
+  border-color: var(--primary);
+}
+.events_box:hover .content a:hover {
+  margin-left: 32px;
+  background-color: var(--primary);
+  border-color: var(--secondary);
 }
 
 .events_box:hover .events_img {
@@ -1063,12 +1075,12 @@ hr {
 
 .events_box .content h4 {
   font-size: 2rem;
-  color: #f63854;
+  color: var(--primary);
 }
 
 .events_box .content p {
   font-size: 1.5rem;
-  color: #f63854;
+  color: var(--primary);
   padding: 1rem 0;
   font-stretch: normal;
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
@@ -1103,7 +1115,7 @@ hr {
 /* .btn {
   display: inline-block;
   padding: 0.5rem 3rem;
-  border: 0.2rem solid #f63854;
+  border: 0.2rem solid var(--primary);
   color: black;
   cursor: pointer;
   font-size: 1.5rem;
@@ -1121,7 +1133,7 @@ hr {
   right: 0;
   width: 0%;
   height: 100%;
-  background: #f63854;
+  background: var(--primary);
   transition: 0.3s linear;
   z-index: -1;
 }
@@ -1150,7 +1162,7 @@ hr {
 }
 
 .form-control:focus {
-  border-color: #f63854;
+  border-color: var(--primary);
   box-shadow: none;
   outline: none;
 }
@@ -1207,7 +1219,7 @@ textarea {
 }
 
 .contact-right .contact-icon {
-  background: #f63854;
+  background: var(--primary);
   color: #fff;
   border-radius: 4px;
   font-size: 20px;
@@ -1226,7 +1238,6 @@ textarea {
   margin-top: 25px;
   margin-left: 45px;
   font-size: 16px;
-
 }
 
 /*cta
@@ -1262,7 +1273,8 @@ textarea {
   letter-spacing: 0.5px;
 }
 
-.footer-area .contact-footer, .footer-news {
+.footer-area .contact-footer,
+.footer-news {
   font-size: 18px;
   color: #fff;
   font-weight: 500;
@@ -1298,11 +1310,11 @@ textarea {
 }
 
 .footer-area .footer-link li a:hover {
-  color: #f63854;
+  color: var(--primary);
 }
 
 .footer-area .address li {
-  margin-bottom:0px;
+  margin-bottom: 0px;
 }
 
 .footer-area .address li a {
@@ -1325,7 +1337,7 @@ textarea {
 }
 
 .footer-area .address li a:hover {
-  color: #f63854;
+  color: var(--primary);
 }
 
 .footer-area #subscribe-form {
@@ -1344,36 +1356,36 @@ textarea {
   height: 52px;
   border-radius: 0;
   background: transparent;
-  color: #f63854;
+  color: var(--primary);
 }
 
 .mail input {
-	padding:9px;
-	width: 200px;
-	font-family:helvetica;
-	font-size:14px;
-	border:0;
-	border-top-left-radius: 5px;
-	border-bottom-left-radius: 5px;
-	outline:0;
+  padding: 9px;
+  width: 200px;
+  font-family: helvetica;
+  font-size: 14px;
+  border: 0;
+  border-top-left-radius: 5px;
+  border-bottom-left-radius: 5px;
+  outline: 0;
 }
 
 .mail #btns {
-	padding:9px;
-	border:0;
-	width: 80px;
+  padding: 9px;
+  border: 0;
+  width: 80px;
   text-align: center;
-	font-family:helvetica;
-	font-size:14px;
-	border-bottom-right-radius: 5px;
-	border-top-right-radius: 5px;
-  background-color: #f63854;
+  font-family: helvetica;
+  font-size: 14px;
+  border-bottom-right-radius: 5px;
+  border-top-right-radius: 5px;
+  background-color: var(--primary);
   color: #fff;
 }
 .mail #btns:hover {
-	background:#f195a3;
-	transition: 300ms ease-in;
-	color:#fff;
+  background: var(--secondary);
+  transition: 300ms ease-in;
+  color: #fff;
 }
 
 @media (max-width: 800px) {
@@ -1400,11 +1412,11 @@ textarea {
   text-decoration: none;
   /* color: rgb(15, 15, 15); */
   background-color: #fff;
-  border: 1.1px solid #f63854;
+  border: 1.1px solid var(--primary);
   padding: 10px;
   border-radius: 50%;
   /* color: #ffe600; */
-  color: #f63854;
+  color: var(--primary);
   /* background-color: #09011b; */
 }
 
@@ -1415,7 +1427,7 @@ textarea {
 }
 
 .socials a:hover {
-  background-color: #f63854;
+  background-color: var(--primary);
   color: #fff;
 }
 
@@ -1468,7 +1480,7 @@ textarea {
 }
 
 #copyright p a {
-  color: #f63854;
+  color: var(--primary);
   text-decoration: none;
 }
 
@@ -1479,7 +1491,7 @@ textarea {
   height: 100px;
   width: auto;
   filter: drop-shadow(2px 2px 2px black);
-  transition: transform 0.3s,filter 0.3s;
+  transition: transform 0.3s, filter 0.3s;
   border-radius: 0.3em;
 }
 
@@ -1538,7 +1550,7 @@ textarea {
 }
 
 .opportunity_btn:hover a {
-  color: #f63854;
+  color: var(--primary);
 }
 
 .navbar-brand img {
@@ -1636,61 +1648,60 @@ textarea {
 /* FAQ section starts here */
 
 .accordionFAQs {
-    background-color: #fff2f2;
-    color: rgb(36, 36, 36);
-    cursor: pointer;
-    padding: 18px;
-    width: 100%;
-    border: none;
-    text-align: left;
-    outline: none;
-    font-size: 20px;
-    transition: 0.4s;
-    border-radius: 6px;
-    border: 3px solid  rgb(202, 202, 202);
-    box-shadow: 5px 5px 5px rgb(207, 201, 201);
-    transition: all .3s ease-in ;
-    margin: 10px;
+  background-color: #fff2f2;
+  color: rgb(36, 36, 36);
+  cursor: pointer;
+  padding: 18px;
+  width: 100%;
+  border: none;
+  text-align: left;
+  outline: none;
+  font-size: 20px;
+  transition: 0.4s;
+  border-radius: 6px;
+  border: 3px solid rgb(202, 202, 202);
+  box-shadow: 5px 5px 5px rgb(207, 201, 201);
+  transition: all 0.3s ease-in;
+  margin: 10px;
 }
-  button.accordionFAQs i.slide-down {
+button.accordionFAQs i.slide-down {
   transform: rotate(0);
   transition: 0.4s;
-  }
-  
-  button.accordionFAQs i.slidedown.slide-top {
+}
+
+button.accordionFAQs i.slidedown.slide-top {
   transform: rotate(-180deg);
   color: #fa5019;
-  }
-  .accordionFAQs:hover {
-    background-color:  #fdf1f1 ; 
-    color: black;
-    border-color: #c2c2c2;
-    box-shadow: 2px 2px 10px rgb(151, 129, 129),5px 5px 25px rgb(207, 201, 201);
-  }
-  .panelFAQs {
-      padding: 0px 18px;
-      background-color: white;
-      max-height: 0;
-      overflow: hidden;
-      transition: max-height .4s ease-out;
-  }
-  .panelParaFAQs {
-    padding: 20px;
-    font-size: 18px;
-  }
-  .panelParaFAQs a{
-    color: black;
-    font-weight: 800;
-  }
-  .accordionFAQs:after {
-    content: '\02795';
-    font-size: 13px;
-    float: right;
-    margin-left: 5px;
-  }
-  
+}
+.accordionFAQs:hover {
+  background-color: #fdf1f1;
+  color: black;
+  border-color: #c2c2c2;
+  box-shadow: 2px 2px 10px rgb(151, 129, 129), 5px 5px 25px rgb(207, 201, 201);
+}
+.panelFAQs {
+  padding: 0px 18px;
+  background-color: white;
+  max-height: 0;
+  overflow: hidden;
+  transition: max-height 0.4s ease-out;
+}
+.panelParaFAQs {
+  padding: 20px;
+  font-size: 18px;
+}
+.panelParaFAQs a {
+  color: black;
+  font-weight: 800;
+}
+.accordionFAQs:after {
+  content: "\02795";
+  font-size: 13px;
+  float: right;
+  margin-left: 5px;
+}
 
-  /* ////FAQ section ends here//// */
+/* ////FAQ section ends here//// */
 
 /* //// Counter starts//// */
 .counter-up {
@@ -1788,7 +1799,7 @@ textarea {
     margin: 10px 0px;
   }
   .opportunity_btn_t {
-  top: -20px;
+    top: -20px;
   }
 }
 
@@ -1801,7 +1812,7 @@ textarea {
     padding: 30px 20px 0 20px;
   }
   .opportunity_btn_t {
-    top:0px;
+    top: 0px;
   }
 }
 
@@ -1814,7 +1825,7 @@ textarea {
 /* //// Counter end//// */
 /* navigate to top button */
 #buttontop {
-  background: #fc0155;
+  background: var(--primary);
   color: white;
   outline: none;
   border: none;
@@ -1840,4 +1851,3 @@ textarea {
   margin: 0;
   padding: 0;
 }
-
