--- a/assets/css/oppurtunity.css
+++ b/assets/css/oppurtunity.css
@@ -1,63 +1,62 @@
 .card {
-    transition: all 0.3s ease-in-out;
-    -moz-transition: all 0.3s ease-in-out;
-    -webkit-transition: all 0.3s ease-in-out;
-    box-shadow: 0px 5px 10px rgb(133 69 69) !important;
-    margin: 3%;
-    min-height: max-content;
-    border-radius: 3rem;
-    flex: 1;
+  transition: all 0.3s ease-in-out;
+  -moz-transition: all 0.3s ease-in-out;
+  -webkit-transition: all 0.3s ease-in-out;
+  box-shadow: 0px 5px 10px rgba(248, 232, 2, 0.25) !important;
+  margin: 3%;
+  min-height: max-content;
+  border-radius: 3rem;
+  flex: 1;
 }
 
 .card:hover {
-    transform: scale(1.05);
-    transition: all 0.3s ease-in-out;
-    -moz-transition: all 0.3s ease-in-out;
-    -webkit-transition: all 0.3s ease-in-out;
-    box-shadow: 0 3px 10px rgb(133 69 69) !important;
+  transform: scale(1.05);
+  transition: all 0.3s ease-in-out;
+  -moz-transition: all 0.3s ease-in-out;
+  -webkit-transition: all 0.3s ease-in-out;
+  box-shadow: 0 3px 10px rgba(248, 232, 2, 0.25) !important;
 }
 
 .card-body {
-    border: 5px;
-    border-radius: 5rem;
+  border: 5px;
+  border-radius: 5rem;
 }
 
 .card-title {
-    color: black;
-    font-weight: bold;
-    font-size: medium;
-    padding-bottom: 6%;
-    padding-top: 6%;
-    font-family: "Arvo", serif;
+  color: black;
+  font-weight: bold;
+  font-size: medium;
+  padding-bottom: 6%;
+  padding-top: 6%;
+  font-family: "Arvo", serif;
 }
 
 li {
-    padding-bottom: 5px;
-    color: #2e2e2e;
+  padding-bottom: 5px;
+  color: #2e2e2e;
 }
 
 .card-img-top {
-    border-radius: 3rem;
+  border-radius: 3rem;
 }
 
 .oppurtunity_section {
-    margin-left: 5%;
-    margin-right: 5%;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
+  margin-left: 5%;
+  margin-right: 5%;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
 }
 
-
 @media only screen and (max-width: 800px) {
-    .card {
-        width: 350px;
-        height: 349px;
-    }
+  .card {
+    width: 350px;
+    height: 349px;
+  }
 
-    .oppurtunity_section {
-        align-items: center;
-        flex-direction: column;
-        margin: 0;
-    }
+  .oppurtunity_section {
+    align-items: center;
+    flex-direction: column;
+    margin: 0;
+  }
 }
