--- a/assets/css/swipper.css
+++ b/assets/css/swipper.css
@@ -1,5 +1,10 @@
 /* Meet Our Team Section*/
 
+:root {
+  --primary: #f7b801;
+  --secondary: #ffd100;
+}
+
 #testimonials #testimonials-slider {
   width: 100%;
   height: 400px;
@@ -30,7 +35,7 @@
   margin: 0;
   clear: both;
   font-size: 14px;
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Open Sans", sans-serif;
   font-weight: 500;
   line-height: 26px;
   margin-bottom: 10px;
@@ -49,21 +54,23 @@
   height: 200px;
   object-fit: cover;
   padding: 3px;
-  border: solid 2px #f63854;
+  border: solid 2px #ffb700;
 }
-.swiper-button-next, .swiper-button-prev {
+.swiper-button-next,
+.swiper-button-prev {
   position: absolute;
   top: 60%;
   color: #fff;
 }
-.swiper-button-next{
+.swiper-button-next {
   right: 50px;
 }
-.swiper-button-prev{
+.swiper-button-prev {
   left: 50px;
 }
 @media (max-width: 800px) {
-  .swiper-button-next, .swiper-button-prev {
+  .swiper-button-next,
+  .swiper-button-prev {
     display: none;
   }
 }
@@ -75,7 +82,12 @@
 }
 
 /* Testimonial Section*/
-.testimonial-community #testimonials-slider .swiper .swiper-slide .img-thumb img {
+.testimonial-community
+  #testimonials-slider
+  .swiper
+  .swiper-slide
+  .img-thumb
+  img {
   border-radius: 50%;
   display: inline-block;
   width: 100px;
@@ -84,7 +96,12 @@
   padding: 3px;
   border: solid 2px #004bed;
 }
-.testimonial-community #testimonials-slider .swiper .swiper-slide .testimonial-item h3 {
+.testimonial-community
+  #testimonials-slider
+  .swiper
+  .swiper-slide
+  .testimonial-item
+  h3 {
   text-align: justify;
   line-height: 28px;
 }
@@ -94,12 +111,22 @@
   margin-top: 0px;
 }
 @media (max-width: 1200px) {
-  .testimonial-community #testimonials-slider .swiper .swiper-slide .testimonial-item h3 {
+  .testimonial-community
+    #testimonials-slider
+    .swiper
+    .swiper-slide
+    .testimonial-item
+    h3 {
     line-height: 25px;
   }
 }
 @media (max-width: 1000px) {
-  .testimonial-community #testimonials-slider .swiper .swiper-slide .testimonial-item h3 {
+  .testimonial-community
+    #testimonials-slider
+    .swiper
+    .swiper-slide
+    .testimonial-item
+    h3 {
     line-height: 29px;
   }
 }
