Illustrations also set to Yellow theme

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -811,7 +811,7 @@ hr {
 3. Hero Area
 ========================================================================== */
 #hero-area {
-  background-image: url(../img/hero-area.svg);
+  background-image: url(../img/hero-area.png);
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -836,6 +836,12 @@ hr {
 
 #hero-area .contents .header-button .btn {
   margin-right: 10px;
+}
+
+#hero-area .img-fluid {
+  position: relative;
+  bottom: 28px;
+  zoom: 1.5;
 }
 
 .sloder-img {
