set a minimum height of home page

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -23,7 +23,8 @@ body {
   -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
   overflow-x: hidden;
-  min-height: fit-content;
+  min-height:fit-content;
+  max-height: max-content;
 }
 
 /* social icons start */
