Changed cards of oppurtuniy_section and blogs(issue #410)

--- a/assets/css/blog.css
+++ b/assets/css/blog.css
@@ -11,7 +11,8 @@
 }
 
 .blog {
-  height: 460px;
+  height: 480px;
+  width: 35%;
   transition: all 0.3s ease-in-out;
   -moz-transition: all 0.3s ease-in-out;
   -webkit-transition: all 0.3s ease-in-out;
@@ -50,7 +51,7 @@
 .image img {
   object-fit: cover;
   width: 100%;
-  border-radius: 30px 30px 0px 0px;
+  border-radius: 15px 15px 0px 0px;
   height: 349px;
 }
 
@@ -66,7 +67,7 @@
   align-items: center;
   flex-direction: column;
   padding: 20px;
-  border-radius: 0px 0px 30px 30px;
+  border-radius: 15px;
   background-color: white;
   color: var(--primary);
 }
@@ -101,34 +102,6 @@
   border-radius: 12px;
 }
 
-/* media queries for screen less than size 430px */
-
-@media screen and (max-width: 430px) {
-  .centered_img {
-    object-fit: cover;
-    margin: auto;
-    max-width: -webkit-fill-available;
-    padding-left: 10px;
-    padding-right: 10px;
-    border-radius: 12px;
-  }
-  .searchbar_div {
-    display: flex;
-    float: none !important;
-    margin-right: 0 !important;
-  }
-  .searchbar_div input {
-    border-radius: 3rem;
-    padding: 10px;
-    border-color: grey;
-    /* width: 130%; */
-    width: 90% !important;
-    margin: auto;
-  }
-  /* .project_card_img {
-    object-fit: contain !important;
-  } */
-}
 #blog .col-md-6 img {
   width: 100%;
   display: block;
@@ -201,8 +174,21 @@
   margin-right: 5%;
 }
 @media screen and (max-width: 1000px) {
+  .blog {
+    margin: 25px;
+    border-radius: 10px;
+    width: 70%;
+  }
+  .blog .image img {
+    border-radius: 15px 15px 0 0;
+  }
+
+  .blog .blog_content {
+    border-radius: 15px;
+  }
+
   #blog .col-md-6 {
-    max-width: 90%;
+    min-width: 100%;
     margin: 1em auto;
   }
 
@@ -214,8 +200,25 @@
 /* media queries for screen less than size 430px */
 
 @media screen and (max-width: 430px) {
+  .blog {
+    margin: 10px;
+    border-radius: 10px;
+    width: 100%;
+  }
+  .blog .image img {
+    border-radius: 15px 15px 0 0;
+  }
+
+  .blog .blog_content {
+    border-radius: 15px;
+  }
+
+  .blog:hover {
+    transform: scale(1.05);
+  }
+
   #blog.col-md-6 {
-    max-width: 80%;
+    min-width: 90%;
     margin: 1em auto;
   }
   .centered_img {
