--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,46 +1,45 @@
-.icon{      
-    float: right;  
+.icon {
+  float: right;
 }
-.heading{
-    font-size: 50px;
-    font-weight: bold;
-    text-align: center;
-    font-family: 'Oswald', sans-serif;    
+.heading {
+  font-size: 50px;
+  font-weight: bold;
+  text-align: center;
+  font-family: "Oswald", sans-serif;
 }
 
 h2 {
-    border-bottom: 3px solid black;
-    display: inline-block;
-    margin-left: 150px;   
+  border-bottom: 3px solid black;
+  display: inline-block;
+  margin-left: 150px;
 }
 
 .page-header {
-    margin-top: 20px;
-    margin-left: -55px;
+  margin-top: 20px;
+  margin-left: -55px;
 }
 
 .guide {
-    padding-top: 50px;
+  padding-top: 50px;
 }
 
-.nav-bar-full{
-    display: flex;
+.nav-bar-full {
+  display: flex;
 }
-.btn .about{
-    color: black;
+.btn .about {
+  color: black;
 }
 
-@media  (min-width: 412px) and (max-width: 915px) {
-    .icon img {
-        min-width: 100%;
-        max-width: 100%;
-    }
+@media (min-width: 412px) and (max-width: 915px) {
+  .icon img {
+    min-width: 100%;
+    max-width: 100%;
+  }
 
-    .page-header h2{
-        font-size: 1.5rem;
-    }
-    .navbar-nav .nav-link {
-            text-align: center;
-
-        }
+  .page-header h2 {
+    font-size: 1.5rem;
+  }
+  .navbar-nav .nav-link {
+    text-align: center;
+  }
 }
