--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -16,8 +16,8 @@ html {
 body {
   background: #fff;
   font-size: 14px;
-  font-weight: 400;
-  font-family: "Open Sans", sans-serif;
+  font-weight: 600;
+  font-family: "Poppins", sans-serif;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
