css error:FAQ.css fixed

--- a/CSS/index.css
+++ b/CSS/index.css
@@ -1,4 +1,4 @@
-/*------- styleing for the contributor section ------*/
+/*------- styling for the contributor section ------*/
 .contributors-holder{
     background-color: black;
     padding: 30px;
