--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -126,7 +126,7 @@ a a:focus {
 
 p {
   font-weight: 400;
-  font-family: "Open Sans", sans-serif;
+  font-family: "Montserrat", sans-serif;
   margin: 0px;
   font-size: 14px;
 }
